--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,4 +30,8 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
+   <welcome-file-list>
+		<welcome-file>/views/index.html</welcome-file>
+	</welcome-file-list>
+
 </web-app>
